--- a/NoteBackend/src/main/resources/application.yml
+++ b/NoteBackend/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
     jwt:
       key: abcde
       expire: 3
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
