--- a/NoteBackend/src/main/resources/application.yml
+++ b/NoteBackend/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
       host: localhost
       port: 6379
       database: 0
+  datasource:
+    url: jdbc:mysql://localhost:3306/note_test_db
+    username: root
+    password: 123456
